tor (0.2.2.23-alpha-1) experimental; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Wed, 09 Mar 2011 14:40:16 +0100

tor (0.2.2.22-alpha-1) experimental; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Wed, 26 Jan 2011 19:20:21 +0100

tor (0.2.2.21-alpha-1) experimental; urgency=high

  * New upstream version, including several security related fixes.  See
    upstream changelog for details.  Addresses CVE-2011-0427.
  * Forward port patches/03_tor_manpage_in_section_8.

 -- Peter Palfrader <weasel@debian.org>  Sun, 16 Jan 2011 18:40:27 +0100

tor (0.2.2.20-alpha-1) experimental; urgency=high

  * New upstream version.
    - Fix a remotely exploitable bug that could be used to crash instances
      of Tor remotely by overflowing on the heap. Remote-code execution
      hasn't been confirmed, but can't be ruled out (CVE-2010-1676).
  * Since the dawn of time (0.0.2pre19-1, January 2004, initial release
    of the debian package), the postinst script has changed ownership and
    permissions of various trees like /var/lib/tor, /var/run/tor, and
    /var/log/tor, sometimes recursively.
    .
    It turns out this actually is a security issue, so try to be more
    conservative when fixing up modes and only chown/chgrp
    /var/{lib,log,run}/tor directly, never recursively.
  * Remove /var/run/tor, recursively, on purge.  We already do this
    for /var/lib/tor and /var/log/tor.

 -- Peter Palfrader <weasel@debian.org>  Sat, 18 Dec 2010 13:35:26 +0100

tor (0.2.2.19-alpha-1) experimental; urgency=low

  * New upstream version.
    - remove debian/patches/15_tlsext_host_name (already included in new
      upstream version).

 -- Peter Palfrader <weasel@debian.org>  Mon, 29 Nov 2010 13:46:10 +0100

tor (0.2.2.18-alpha-2) experimental; urgency=low

  * If we overwrite src/or/micro-revision.i in during build,
    clean it out in the clean target.